--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,8 @@ bld/
 .vscode/
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+IPDC.sln
+IPDC.pyproj
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
